[gd_scene load_steps=15 format=2]

[ext_resource path="res://HowToPlayMenu.gd" type="Script" id=1]
[ext_resource path="res://HowToPlayBackButton.gd" type="Script" id=2]
[ext_resource path="res://Ui.theme" type="Theme" id=3]
[ext_resource path="res://img/gamepad.png" type="Texture2D" id=4]
[ext_resource path="res://fonts/NotoSerif-Regular.ttf" type="FontFile" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.678431, 0.678431, 0.678431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.156863, 0.129412, 0.113725, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.996078, 0.854902, 0.423529, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.129412, 0.113725, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.996078, 0.854902, 0.423529, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.678431, 0.678431, 0.678431, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="FontFile" id=1]
size = 24
spacing_top = 5
spacing_bottom = 5
extra_spacing_space = 2
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=7]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.913725, 0.913725, 0.913725, 1 )
Button/colors/font_color_disabled = Color( 0.156863, 0.129412, 0.113725, 0.317647 )
Button/colors/font_color_focus = Color( 0.996078, 0.854902, 0.423529, 1 )
Button/colors/font_color_hover = Color( 0.996078, 0.854902, 0.423529, 1 )
Button/colors/font_color_pressed = Color( 0.156863, 0.129412, 0.113725, 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )
CheckBox/colors/font_color_focus = Color( 0.913725, 0.913725, 0.913725, 1 )
CheckBox/colors/font_color_hover = Color( 0.996078, 0.854902, 0.423529, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0.996078, 0.854902, 0.423529, 1 )
CheckBox/colors/font_color_pressed = Color( 0.996078, 0.854902, 0.423529, 0.670588 )
CheckBox/constants/h_separation = 10
CheckBox/icons/checked = null
HBoxContainer/constants/separation = 40
Label/colors/font_color = Color( 0.913725, 0.913725, 0.913725, 1 )
Label/fonts/font = SubResource( 1 )
RichTextLabel/colors/default_color = Color( 0.913725, 0.913725, 0.913725, 1 )
RichTextLabel/fonts/normal_font = SubResource( 7 )
VBoxContainer/constants/separation = 10

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GamepadControls:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyboardControls:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( -2000, 0 ) ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("GamepadControls:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2000, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyboardControls:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( -2000, 0 ), Vector2( 0, 0 ) ]
}

[node name="HowToPlayMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GamepadControls" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -0.000488281

[node name="Control" type="Control" parent="GamepadControls"]
offset_left = 511.0
offset_top = 300.0
offset_right = 511.0
offset_bottom = 300.0

[node name="TextureRect" type="TextureRect" parent="GamepadControls/Control"]
offset_left = -265.0
offset_top = -159.0
offset_right = 214.0
offset_bottom = 151.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GamepadControls/Control"]
offset_left = -277.0
offset_top = 167.0
offset_right = -57.0
offset_bottom = 258.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "GAMEPAD_CTRL_LEFTSTICK"
align = 1

[node name="Label2" type="Label" parent="GamepadControls/Control"]
offset_left = -2.0
offset_top = 167.0
offset_right = 218.0
offset_bottom = 258.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "GAMEPAD_CTRL_RIGHTSTICK"
align = 1

[node name="Label4" type="Label" parent="GamepadControls/Control"]
offset_left = -258.0
offset_top = -228.0
offset_right = -1.0
offset_bottom = -180.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "GAMEPAD_CTRL_RISE"
align = 1

[node name="Label6" type="Label" parent="GamepadControls/Control"]
offset_left = 166.0
offset_top = -138.0
offset_right = 416.0
offset_bottom = -90.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.886275, 0.611765, 0.121569, 1 )
text = "GAMEPAD_CTRL_STOPADJUST"

[node name="Label7" type="Label" parent="GamepadControls/Control"]
offset_left = 218.0
offset_top = -11.0
offset_right = 368.0
offset_bottom = 37.0
pivot_offset = Vector2( 54, 48 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.309804, 0.858824, 0.294118, 1 )
text = "GAMEPAD_CTRL_SPLASH"

[node name="Label9" type="Label" parent="GamepadControls/Control"]
offset_left = 201.0
offset_top = -52.0
offset_right = 407.0
offset_bottom = -4.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.235294, 0.505882, 0.968627, 1 )
text = "GAMEPAD_CTRL_COLLECT"

[node name="Label8" type="Label" parent="GamepadControls/Control"]
offset_left = 190.0
offset_top = -96.0
offset_right = 340.0
offset_bottom = -48.0
pivot_offset = Vector2( 255, 61 )
theme = SubResource( 8 )
custom_colors/font_color = Color( 0.909804, 0.0509804, 0.0509804, 1 )
text = "GAMEPAD_CTRL_PLACEMIRROR"

[node name="Label5" type="Label" parent="GamepadControls/Control"]
offset_left = -443.0
offset_top = -175.0
offset_right = -182.0
offset_bottom = -127.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "GAMEPAD_CTRL_SINK"
align = 2

[node name="ColorRect" type="ColorRect" parent="GamepadControls/Control"]
offset_left = -103.0
offset_top = 87.0
offset_right = -98.0
offset_bottom = 175.0
pivot_offset = Vector2( 18, 88 )

[node name="ColorRect2" type="ColorRect" parent="GamepadControls/Control"]
offset_left = 48.0
offset_top = 90.0
offset_right = 53.0
offset_bottom = 178.0
pivot_offset = Vector2( 18, 88 )

[node name="KeyboardControls" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2000.0
offset_right = -2000.0

[node name="Control" type="Control" parent="KeyboardControls"]
offset_left = 511.0
offset_top = 300.0
offset_right = 511.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="KeyboardControls/Control"]
offset_left = 14.0
offset_top = -229.0
offset_right = 311.0
offset_bottom = 285.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "KEYBOARD_CTRL_FUNCTIONS"

[node name="Label2" type="Label" parent="KeyboardControls/Control"]
offset_left = -364.0
offset_top = -229.0
offset_right = -67.0
offset_bottom = 285.0
pivot_offset = Vector2( 255, 61 )
theme = ExtResource( 3 )
text = "KEYBOARD_CTRL_KEYS"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 9 )
anims/show_controls = SubResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
offset_bottom = 63.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
offset_left = 280.0
offset_top = 20.0
offset_right = 743.0
offset_bottom = 42.0
custom_constants/separation = 20

[node name="KeyboardButton" type="Button" parent="CenterContainer/HBoxContainer"]
offset_right = 156.0
offset_bottom = 22.0
text = "KEYBOARD_CONTROLS"

[node name="HowToPlayBackButton" type="Button" parent="CenterContainer/HBoxContainer"]
offset_left = 176.0
offset_right = 291.0
offset_bottom = 22.0
text = "BACK_TO_MENU"
script = ExtResource( 2 )

[node name="GamepadButton" type="Button" parent="CenterContainer/HBoxContainer"]
offset_left = 311.0
offset_right = 463.0
offset_bottom = 22.0
text = "GAMEPAD_CONTROLS"

[connection signal="pressed" from="CenterContainer/HBoxContainer/KeyboardButton" to="." method="_on_KeyboardButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/GamepadButton" to="." method="_on_GamepadButton_pressed"]
